# tc-nqs-preview

./: .gitignore  MLP.ipynb  MLP_backflow.ipynb  NN to learn CI.ipynb  README.md  hamiltonian.py  pyproject.toml  study with pyscf.ipynb  study.ipynb
Jax Study/: NN with Flax and JAX.ipynb
sampling/: sample.py
tcnqs/: MLP.py  backflow.py  fcidump.py  hamiltonian.py  hamiltonian_jit.py  hamiltonian_old.py  mlp.py  slater_det.py  toy_ham.py  trainer.py  trainer_refactor.py  trainer_vite.py  utils.py
tcnqs/sampler/: __init__.py  connected_dets.py  fssc.py  sss.py  stoch_gen.py
tcnqs/test/: test_MLP.py  test_backflow.py  test_electron_backflow.py  test_fcidump.py  test_ham_NN.py  test_ham_stoch_gen  test_ham_stoch_gen.py  test_hamiltoian.py  test_hamiltonian_jit  test_hamiltonian_jit.py  test_parameters.py  test_supervised.py  test_train_batched.py  test_train_conn_dets.py  test_train_fssc.py  test_train_full_ham.py  test_train_hci.py  test_train_minSR.py  test_train_projections.py  test_train_vite.py
tcnqs/test/dataset_fcidump/: fcidump
