[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcnqs"
version = "0.1.0"
description = "Transcorrelated Second-Quantized Neural Network Quantum State"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "jax",
    "jaxlib",
    "pyscf",
    "scipy",
    "numpy",
    "optax",
    "flax",
    "h5py",
    "folx"
]

[project.optional-dependencies]
tc = [
    "pytc"
]
wandb = [
    "wandb"
]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tcnqs*"]
